<resources>
    <string name="app_name">Gymapp</string>
    <string name="imagedescirtion">Imagen</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="recordar">Recordar</string>
    <string name="login">Login</string>
    <string name="error_default">Error: </string>
    <string name="error_login">Invalid Login or password</string>
    <string name="error_register_pass2">Error: Contraseña no Igual</string>
    <string name="error_register_pass">Error: Contraseña Sencilla</string>
    <string name="error_register_mail">Error: E-Mail ya en Uso</string>
    <string name="error_register_mail2">Error: Dirección Incorrecta</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_boton">Iniciar Sesion</string>
    <string name="acceder">Acceder</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="registro">Register</string>
    <string name="repearpassword">Repeat Password</string>
    <string name="ejerdefname">Ejercicio</string>
    <string name="cancelar">Cancelar</string>
    <string name="aplicar">Aplicar</string>
    <string name="crear_tabla">Creación de Tablas</string>
    <string name="usuario">Usuario</string>
    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="series">Series</string>
    <string name="repeticiones">Repeticiones</string>
    <string name="peso">Peso</string>
    <string name="id">ID</string>
    <string name="crear_ejer">Creación de Ejercicios</string>
    <string name="calendario">Calendario</string>
    <string name="añadir">Añadir</string>
    <string name="borrar_tabla">Borrar Tabla</string>
    <string name="visualizar">Visualizar</string>
    <string name="horarioinstructor">Lunes a Viernes de 9:00 a 14:00 y de 17:00 a 20:00</string>
    <string name="horarioinstructor2">Disponibilidad de Instructores:</string>
    <string name="horario">Horario</string>
    <string name="hora">Hora</string>
    <string name="h9">9:00</string>
    <string name="h10">10:00</string>
    <string name="h11">11:00</string>
    <string name="h12">12:00</string>
    <string name="h13">13:00</string>
    <string name="h17">17:00</string>
    <string name="h18">18:00</string>
    <string name="h19">19:00</string>
    <string name="h20">20:00</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="reservar">Reservar</string>
    <string name="personas">Personas</string>
    <string name="evento">Evento</string>
    <string name="resumen_evento">Resumen Evento</string>
    <string name="empty_string" />
    <string name="dia">Día</string>
    <string name="borrar">Borrar</string>

</resources>