<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".EjerCreator">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:contentDescription="@string/imagedescirtion"
            android:id="@+id/logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logogym2" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/creatorejer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/crear_ejer"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:contentDescription="@string/imagedescirtion"
            android:id="@+id/logoutlogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logout" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#E6E2E2"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:contentDescription="@string/imagedescirtion"
                android:id="@+id/tablaicon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"

                android:padding="10dp"
                app:srcCompat="@drawable/edittableicon" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:contentDescription="@string/imagedescirtion"
                android:id="@+id/ejericon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="#EC6767"
                android:layout_gravity="center"
                android:padding="10dp"
                app:srcCompat="@drawable/editejericon" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:contentDescription="@string/imagedescirtion"
                android:id="@+id/calendaricon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:padding="10dp"
                app:srcCompat="@drawable/calendaricon" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        tools:ignore="MissingConstraints">
        <EditText
            android:inputType="text"
            android:autofillHints="name"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:id="@+id/newejer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/ejerdefname"
            android:text=""/>
        <EditText
        android:inputType="number"
        android:autofillHints="name"
        android:layout_margin="5dp"
        android:textSize="15sp"
        android:id="@+id/newejerid"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ems="2"
        android:hint="@string/id"
        android:text=""/>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/series"
                android:textAlignment="center"
                android:textSize="25sp" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <EditText
                android:autofillHints="name"
                android:inputType="number"
                android:id="@+id/newejerserie"
                android:layout_margin="1dp"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="2"
                android:hint="@string/series"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeticiones"
                android:textAlignment="center"
                android:textSize="25sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <EditText
                android:autofillHints="name"
                android:inputType="number"
                android:id="@+id/newejerrepes"
                android:layout_margin="1dp"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/repeticiones"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:textAlignment="center"
                android:textSize="25sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <EditText
                android:autofillHints="name"
                android:inputType="text"
                android:id="@+id/newejerpeso"
                android:layout_margin="1dp"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="2"
                android:hint="@string/peso"
                android:text=""/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:backgroundTint="#ED3B3B"
            android:text="@string/cancelar"
            android:textSize="20sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Aplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:backgroundTint="#ED3B3B"
            android:text="@string/aplicar"
            android:textSize="20sp" />


    </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>