<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".TableCreatorV2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/logo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logogym2" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/creatortable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/crear_tabla"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:background="@drawable/bg_logout"
                android:contentDescription="@string/app_name"
                android:id="@+id/logoutlogo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/logout" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_menu"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/tablaicon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_icon"
                android:padding="10dp"
                app:srcCompat="@drawable/edittableicon" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/ejericon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:padding="10dp"
                app:srcCompat="@drawable/editejericon" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/calendaricon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:padding="10dp"
                app:srcCompat="@drawable/calendaricon" />
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">

                    <EditText
                        android:autofillHints="name"
                        android:inputType="text"
                        android:id="@+id/textusuario"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="12"
                        android:hint="@string/usuario"
                        android:text="" />

                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical"
                    tools:ignore="MissingConstraints">

                    <EditText

                        android:autofillHints="name"
                        android:inputType="text"
                        android:padding="8dp"
                        android:id="@+id/editej"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_edit_text"
                        android:textColorHint="@color/white"
                        android:hint="@string/ejerdefname"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView"
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/series"
                                android:textAlignment="center"
                                android:textSize="15sp" />
                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />
                            <EditText
                                android:autofillHints="name"
                                android:inputType="number"
                                android:id="@+id/ejerserie"
                                android:layout_margin="1dp"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="2"
                                android:hint="@string/series"
                                android:text=""/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView2"
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/repeticiones"
                                android:textAlignment="center"
                                android:textSize="15sp"  />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />
                            <EditText
                                android:autofillHints="name"
                                android:inputType="number"
                                android:id="@+id/ejerrepes"
                                android:layout_margin="1dp"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="5"
                                android:hint="@string/repeticiones"
                                android:text=""/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView3"
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/peso"
                                android:textAlignment="center"
                                android:textSize="15sp"  />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />
                            <EditText
                                android:autofillHints="name"
                                android:inputType="text"
                                android:id="@+id/ejerpeso"
                                android:layout_margin="1dp"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="2"
                                android:hint="@string/peso"
                                android:text=""/>
                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/Cancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:backgroundTint="#EC6767"
                        android:text="@string/cancelar"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                    <Button
                        android:id="@+id/add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:backgroundTint="#62B35C"
                        android:text="@string/añadir"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="bottom"
                    android:orientation="vertical"
                    android:padding="20sp">

                    <Button
                        android:id="@+id/visualizar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:backgroundTint="#62B35C"
                        android:text="@string/visualizar"
                        android:textSize="20sp" />
                    <Button
                        android:id="@+id/borrarTabla"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:backgroundTint="#373131"
                        android:text="@string/borrar_tabla"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>